Fix map centering on mobile

--- a/web/app/themes/waq2015/assets/css/application.css
+++ b/web/app/themes/waq2015/assets/css/application.css
@@ -3929,7 +3929,7 @@ footer .logo-o2 {
         padding: 0 0 0; }
     .event-location .map,
     .event-location .map-container {
-      position: static;
+      position: relative;
       top: 0;
       left: 0;
       width: 100%;
