--- a/web/app/themes/waq2015/assets/sass/mediaqueries/_general.sass
+++ b/web/app/themes/waq2015/assets/sass/mediaqueries/_general.sass
@@ -543,7 +543,7 @@
       padding-bottom: 30px
     .map,
     .map-container
-      position: static
+      position: relative
       top: 0
       left: 0
       width: 100%
